tests/snapshots/scheduler__github_issue_pr_body_still_uses_closes.snap
---
source: tests/scheduler.rs
expression: spec.body
---
Closes https://github.com/StGerman/crewd/issues/99

## Commits

- do the work

## Provenance

Opened by crewd from 1 run of MT-1 (3 turns, 1200 tokens in / 750 out). The verdict on each review comment is recorded as a reply on its thread; merging is left to a human.
